styles.css
*,::after,::before{
    margin: 0;
    padding: 0;
    font-size: 16px;
    scroll-behavior: smooth;
}
html{
    /* width: 100vw;
    overflow-x: hidden; */
}
body{
    background-color: var(--main-color);
    color: var(--main-text-color);
    max-width: 100vw;
    overflow-x:hidden ;
    font-family: Arial, Helvetica, sans-serif;
   /* position: relative;  */
}
#main_content{
    display: none;
}
a{
    text-decoration :none;
    color:var(--main-text-color);
}

:root{
    --main-color:#272727;

    /* light mode */
    /* --main-color:rgb(155, 151, 151); 
    --secondary-color:rgba(240, 240, 240, 0.781);
    --main-text-color:rgb(68, 68, 68); */

    --secondary-color:rgba(34, 34, 34, 0.781);
    --main-text-color:rgb(230,230,203);
    --btn-color:hsl(273, 64%, 52%);
    --btn-color-light:#9d57d6fb;
    --variant-color:hsl(273, 62%, 25%);
    --main-light-color:hsl(0, 0%, 25%);
}
.navbar-container{
    width: 100vw;
    overflow: none;
    display: flex;
    flex-direction: row;
    margin:2rem;
    height: 15vh;
}
.navbar-content{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;
}
.navbar-links{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    color: var(--btn-color);
}
.navbar-links a{
    text-decoration: none;
    color: gray;
}
.navbar-links a:hover,.navbar-links a:focus{
    color: var(--btn-color);
}
.navbar-content>ul li{
    text-decoration: none;
    list-style: none;
    margin-left: 3rem;
    font-weight: 600;
}
.navbar-logo{
    align-self: flex-start;
}
section{
    /* margin: 5rem 2rem; */
    /* transform: translateX(-2rem); */
}

.contact_button{
    padding:.75rem 1.5rem;
    border: solid var(--btn-color) 2px;
    background-color: transparent;
    color: var(--btn-color);
    border-radius: 6px;
    text-transform: uppercase;
    cursor: pointer;
    margin: 1rem 0;
    transition: 3s all cubic-bezier(0.165, 0.84, 0.44, 1);
    font-size: 1.2rem;

}
.contact_button a{
    font-size: 1.2rem;
    color: var(--btn-color);
    text-shadow: 0 0 0 .125 white
     0 0 0 0.125em var(--btn-color) ;
}
.contact_button:hover a{
    color: white;
}

.contact_button:hover{
    color: white;
    border:solid var(--btn-color-light) 2px;
    background-color: var(--btn-color-light);
}
h1{
    font-size: 2rem;
    
}
.about-me{
    display:flex ;
    flex-direction: row;
    justify-content: space-evenly;
    /* width: 100vw; */
    min-height: 70vh;
    margin: 2rem 4rem;
    font-family: 'Courier New', Courier, monospace;
    width: 100vw;
    overflow-x: hidden;
    transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
    -webkit-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
    -moz-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
    -ms-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
    -o-transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19) ;
}
.about-me__title{
    width: 35%;
    height: 50%;
    /* text-align: center; */
    overflow-x: hidden;
}
.about-me__info .name{
    width: 60%;
}
.about-me__name{
    height:90%;
    width: 47.5%;
}

.about-me__special{
    background-color: var(--btn-color);
    height: .2rem;
    margin-top: .5rem;
    width: 6rem;
    overflow-x: hidden;
    animation: 4s linear forwards specialAnimation infinite;
}

.about-me__link{
    color: grey;
    padding:1rem 0rem;
}
.about-me__image{
    height: 30vh;
    width: 15vw;
    position: relative;
}
.socials{
    display: flex;
    flex-direction: row;
    /* height: 1rem; */
    justify-content: start;
    align-items: center;
    margin-top: 1rem;
}
.icon_socials{
    height: 2rem;
    margin: .5rem;
    object-fit: contain;
    /*filter: invert(1) sepia(0) saturate(130%) hue-rotate(10deg);
    */fill: rgb(24, 23, 23);
    cursor: pointer;
  
}
.icon_socials:hover{
  fill: var(--btn-color);
 
}
.icon_socials svg{
    height: 1.5rem;
    transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
    -webkit-transition:all .75s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
    -moz-transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
    -ms-transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
    -o-transition:all 3s cubic-bezier(0.6, 0.04, 0.98, 0.335) ;
}
footer .socials .icon_socials svg:hover{
    fill: var(--main-color);
}
.about-me__info{
    /* height: 3rem; */
    width:60%;
    /* background-image: url('https://bashooka.com/wp-content/uploads/2018/04/scg-canvas-background-animation-24.jpg'); */
}

.img{
    object-fit: contain;
    height: 100%;
    border-radius: 10px;
    filter: brightness(70%);
    position: absolute;
    top: 0;
    /* border: solid white 5px; */
    
}

.image-effect{
    position: absolute;
    top: -10%;
    left: 35%;
    background-color: var(--variant-color);
    filter: blur(60px);
    height: 30%;
    width: 30%;
    border-radius: 50%;
    z-index: -1;
    animation: 5s 2s linear forwards specialAnimation2;
}

.image-effect_1{
    position: absolute;
    top: 60%;
    left: -10%;
    background-color: var(--variant-color);
    filter: blur(60px);
    height: 30%;
    width: 30%;
    border-radius: 50%;
    z-index: -1;
    animation: 5s 2s linear forwards specialAnimation2 infinite;
}
.about-me__info-header{
    margin: 1.25rem 0;
    
}
.about-me__info .name{
    font-size: 1.2rem;
    font-weight: 600;
    overflow: hidden;
    border-right: .15em solid white;
    /* width: 5rem; */
    white-space: nowrap;
    animation: typing 5s steps(13,end) 1.5s,
                blink-caret .5s step-end infinite;
}
@keyframes typing {
    from{width: 0;}
    to{width: 100%;}
}

@keyframes blink-caret{
    from,to{border-color: transparent;}
    50%{border-color: #ffffff;}
}
.about-me_greeting{
    color: var(--btn-color);
    letter-spacing: 5px;
    font-size: 2.5rem;
    font-weight: 700;
    font-family: Arial, Helvetica, sans-serif;
    /* margin-bottom: 1rem; */
}
.about-me__text{
    color: rgb(109, 109, 109);
    width: 50%;
}
/* ... */

